# easy_calculator

./: .gitignore  LICENSE  README.md
Dll/: CMakeLists.txt  main.cpp  xmake.lua
Dll/calc/: CMakeLists.txt  calc.h
Dll/src/: calc.cpp  calc.h  main.cpp
Dll/src/calc/: calc.cpp
EasyCalculator/: MainWindow.py  main.py  requirement.txt
src_dll/: CMakeLists.txt  calc.h  main.cpp  multplat.h
src_dll/calc/: CMakeLists.txt  calc.cpp  calc.h  calc_inside.h
src_dll_dotnet/: Calc.cs  Calc_DLL.sln  Class1.cs  calc.sln  src_dll_dotnet.csproj
src_py/: MainWindow.py  calc.py  pack.spec  requirements.txt
